--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "gh-pages": "^3.0.0",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5"
   }
 }
